# swarm-robotics

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt~  CollisionDocument.txt  Makefile  README.md  coordinates.txt  gittest.cpp  gittest.h  manifest.xml  rosInstructions.txt  runSchedule.sh  se306_runnable.sh
bash_runnable/: se306_runnable.sh
makeFiles/: run_R0.sh  run_R1.sh  run_R2.sh  run_R3.sh  run_R4.sh  run_R5.sh  run_R6.sh  se306_runnable_debug.sh
msg/: RobotMsg.msg  move.msg
msg_gen/cpp/include/project1/: move.h
msg_gen/lisp/: _package.lisp  _package_move.lisp  move.lisp  project1-msg.asd
project1/: .cproject  .project  .pydevproject  manifest.xml
project1/world/: myworld.world
se306_p1/: .cproject  .project  .pydevproject  mainpage.dox  manifest.xml
se306_p1/world/: myworld.world  myworld.world~
src/: R0.cpp  R1.cpp  Schedule.cpp  caregiver.cpp  collisionrobot1.cpp  collisionrobot2.cpp  collisionrobot3.cpp  collisionrobot4.cpp  collisions.cpp  companionshiprobot.cpp  cookingRobot.cpp  cookingrobot.cpp  doctor.cpp  entertainmentrobot.cpp  friend2.cpp  medicalrobot.cpp  nurse.cpp  relative.cpp  relative2.cpp  resident.cpp  resident.cpp~  schedule.cpp  sidecollisionrobot1.cpp  sidecollisionrobot2.cpp  test.cpp  visitor.cpp  visitor.cpp~
src/project1/msg/: _move.py
test/: cookingRobotTest.cpp  resident.test  residentTest.cpp  visitorTest.cpp
world/: myworld.world  myworld.world~
